@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.4.9) unstable; urgency=low
 
   * http-cache: explicitly start reading into cache
+  * cgi: clear "headers" variable before publishing the response
 
  --
 
